<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MeetService2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="register">Registro</string>
    <string name="about">Acerca de</string>
    <string name="login">Iniciar Sesión</string>
    <string name="title_activity_new_reg">NewReg</string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellidos</string>
    <string name="email">E-mail</string>
    <string name="profession">Profesión</string>
    <string name="address">Dirección</string>
    <string name="city">Ciudad</string>
    <string name="confirm">Confirmar Contraseña</string>
    <string name="send">Enviar</string>
    <string name="title_activity_about">About</string>
    <string name="tel">Telefono</string>
    <string name="title_activity_user_main">UserMain</string>
    <string name="offer">Ofrecer Servicio</string>
    <string name="get_button">Search a Service</string>
    <string name="obtained_button">Obtained Services</string>
    <string name="title_activity_offer_service">OfferService</string>
    <string name="offeredNew_button">Offer New</string>
    <string name="title_activity_new_service_offer">NewServiceOffer</string>
    <string name="decript">Descripción</string>
    <string name="webpage">Página Web</string>
    <string name="title_activity_service_selected">ServiceSelectedActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search">Buscar</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="title_activity_service_picked">ServicePickedActivity</string>
    <string name="title_activity_recomendacion_calificacion">RecomendacionCalificacionActivity</string>
    <string name="mensaje_error_calificaciones">Una o más items no han sido calificados, por favor verifique antes de continuar</string>
    <string name="puntualidad">Puntualidad:</string>
    <string name="calidad">Calidad del Servicio:</string>
    <string name="cumplimiento">Cumplimiento del servicio:</string>
    <string name="atencion">Atencion durante el servicio:</string>
    <string name="costo">Costo del servicio:</string>
    <string name="comentarios">Comentarios:</string>
    <string name="calificar_servicio">CALIFICAR SERVICIO</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="title_activity_admin_service">AdminService</string>
    <string name="title_activity_last_list_service">LastListServiceActivity</string>
    <string name="title_activity_service_option">ServiceOption</string>
    <string name="title_activity_take_service">TakeServiceActivity</string>
    <string name="title_activity_inbox">InboxActivity</string>

</resources>