<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="meetservice.ScoreServiceActivity" >
    
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TittleQualify"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/calificar_servicio"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="16dp" >

        <TextView
            android:id="@+id/Puntualidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/puntualidad" />

        <RadioGroup
            android:id="@+id/rbPunt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/Puntualidad"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/P1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/uno" />

            <RadioButton
                android:id="@+id/P2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dos" />

            <RadioButton
                android:id="@+id/P3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tres" />

            <RadioButton
                android:id="@+id/P4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuatro" />

            <RadioButton
                android:id="@+id/P5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cinco" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/rbCal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Calidad"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/C1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/uno" />

            <RadioButton
                android:id="@+id/C2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dos" />

            <RadioButton
                android:id="@+id/C3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tres" />

            <RadioButton
                android:id="@+id/C4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuatro" />

            <RadioButton
                android:id="@+id/C5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cinco" />
        </RadioGroup>

        <TextView
            android:id="@+id/Calidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/rbPunt"
            android:text="@string/calidad" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp" >

        <TextView
            android:id="@+id/Comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/comentarios" />

        <EditText
            android:id="@+id/comment1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/Comment"
            android:ems="10"
            android:inputType="textMultiLine" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/Sendbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/comment1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:text="@string/send" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/relativeLayout2"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/Atencion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atencion" />

        <RadioGroup
            android:id="@+id/rbAten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/A1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/uno" />

            <RadioButton
                android:id="@+id/A2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dos" />

            <RadioButton
                android:id="@+id/A3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tres" />

            <RadioButton
                android:id="@+id/A4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuatro" />

            <RadioButton
                android:id="@+id/A5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cinco" />
        </RadioGroup>

        <TextView
            android:id="@+id/Cumplimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cumplimiento" />

        <RadioGroup
            android:id="@+id/rbCum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/Cu1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/uno" />

            <RadioButton
                android:id="@+id/Cu2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dos" />

            <RadioButton
                android:id="@+id/Cu3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tres" />

            <RadioButton
                android:id="@+id/Cu4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuatro" />

            <RadioButton
                android:id="@+id/Cu5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cinco" />
        </RadioGroup>

        <TextView
            android:id="@+id/Costo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/costo" />

        <RadioGroup
            android:id="@+id/rbCos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/Co1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/uno" />

            <RadioButton
                android:id="@+id/Co2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dos" />

            <RadioButton
                android:id="@+id/Co3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tres" />

            <RadioButton
                android:id="@+id/Co4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuatro" />

            <RadioButton
                android:id="@+id/Co5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cinco" />
        </RadioGroup>
    </LinearLayout>

</RelativeLayout>